syntax = "proto3";

package keys;

service Keys {
    rpc Gen(GenRequest) returns (GenResponse);
    rpc Lock(LockRequest) returns (Error);
    rpc Unlock(LockRequest) returns (Error);
    rpc Pub(PubRequest) returns (PubResponse);
    rpc Sign(SignRequest) returns (SignResponse);
    rpc Verify(VerifyRequest) returns (Error);
    rpc Hash(HashRequest) returns (HashResponse);
    rpc Remove(KeyName) returns (Error);
    rpc List(KeyName) returns (ListResponse);
    rpc Add(AddRequest) returns (Error);
}

message KeyName {
    string keyname = 1;
}
message Error {
    string error = 1;
}

message GenRequest {
    string auth = 1;
    string keytype = 2;
    string keyname = 3;
}

message GenResponse {
    string address = 1;
    Error error = 2;
}

message LockRequest {
    string auth = 1;
    string address = 2;
    string keyname = 3;
}

message UnlockRequest {
    string auth = 1;
    string address = 2;
    string keyname = 3;
    int32 timeout = 4;	// minutes
}

message PubRequest {
    string keyname = 1;
    string address = 2;
} 

message PubResponse {
    Error error = 1;
    string pub = 2;
}

message SignRequest {
    string keyname = 1;
    string address = 2;
    bytes message = 3;
}

message SignResponse {
    string signature = 1;
    Error error = 2;
}

message VerifyRequest {
    string keytype = 1;
    string pub = 2;
    string message = 3;
    string signature = 4;
}

message HashRequest {
    string keytype = 1;
    string auth = 2;
    bytes message = 3;
}

message HashResponse {
    string hash = 1;
    Error error = 2;
}

message Key {
    string address = 1;
    repeated string keynames = 2;
}

message ListResponse {
    repeated Key key = 1;
}

message AddRequest {
    string keyname = 1;
    string address = 2;
}
